<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar">Avatar</string>
    <string name="menu">Menu</string>
    <string name="like">Likes</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="post_text">post text</string>
    <string name="edit_message">Edit message</string>
    <string name="edit_icon">Edit icon</string>
    <string name="close_icon">Close edit</string>
    <string name="add">add</string>
    <string name="apply_text">Apply text</string>
    <string name="video_name">Video name</string>
    <string name="video_preview">Video preview</string>
    <string name="play_button">Play button</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
</resources>