<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.FeedFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:layout_margin="@dimen/commonSize"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commonSize"
        android:layout_marginEnd="@dimen/commonSize"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/menu_button"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginEnd="@dimen/commonSize"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="@id/author" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/commonSize"
        android:scrollbars="vertical"
        android:autoLink="all"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playButton"
        style="@style/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="@id/videoImage"
        app:layout_constraintEnd_toEndOf="@id/videoImage"
        app:layout_constraintStart_toStartOf="@id/videoImage"
        app:layout_constraintTop_toTopOf="@id/videoImage" />

    <ImageView
        android:id="@+id/videoImage"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="@dimen/commonSize"
        android:contentDescription="@string/video_preview"
        android:src="@drawable/youtube_preview"
        app:layout_constraintBottom_toTopOf="@id/videoName"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

    <TextView
        android:id="@+id/videoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_name"
        app:layout_constraintBottom_toTopOf="@id/videoBarrier"
        app:layout_constraintStart_toStartOf="@id/videoImage"
        app:layout_constraintTop_toBottomOf="@id/videoImage" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/videoBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="videoImage, videoName" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="playButton, videoName, videoBarrier, videoImage, " />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonSize"
        android:checkable="true"
        android:contentDescription="@string/like"
        android:textColor="?attr/colorControlNormal"
        app:icon="@drawable/like_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/videoBarrier"
        tools:text="10К" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonSize"
        android:contentDescription="@string/share"
        android:textColor="?attr/colorControlNormal"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/videoBarrier"
        tools:text="10К" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view"
        style="@style/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonSize"
        android:background="@android:color/transparent"
        android:contentDescription="@string/views"
        android:textColor="?attr/colorControlNormal"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/videoBarrier"
        tools:text="10К" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


</androidx.constraintlayout.widget.ConstraintLayout>